--- a/docs/DeFi.mdx
+++ b/docs/DeFi.mdx
@@ -107,7 +107,7 @@ Decentralized exchanges or DEXs are platforms which enable the exchange of digit
 
 差別在於,任何人都可以在 DEX 當中增設你想要交易的代幣,我們不再需要苦苦等待交易所上幣的消息,而交易過後的代幣,進到的是自己的口袋,並非中心化交易所的用戶錢包,自己擁有所有資產的掌控權,DeFi 且無須許可的操作在 DEX 當中表露無遺.
 
-只可惜 order book 的方式其實並非最適合 DeFi 生態的交易方式,由於許多新出現於市場上的 defi token 並沒有足夠的流動性在單一的 DEX 中供使用者交易,這一個難題於使用「[自動做市商- AMM (Automated Market Maker)](#uniswap-amm-mechanisms)」機制的 DEX 出現後慢慢得到了改善,透過匯集交易流動性的效果,交易者並非如以往一樣是以交易所中的買賣方進行互動,所有需要買賣代幣的使用者都是與 AMM 機制當中的流動池所交互,如此大大改善了 DEX 以往流動性不足的問題,如 Uniswap, Balancer, Curve,這些協議在 AMM 的設計當中都有著些微差異想要去解決現有問題,如 Balancer 不限於進行兩種 token 的交易、Curve 更利於穩定幣的交易等等.
+只可惜 order book 的方式其實並非最適合 DeFi 生態的交易方式,由於許多新出現於市場上的 defi token 並沒有足夠的流動性在單一的 DEX 中供使用者交易,這一個難題於使用「自動做市商- AMM (Automated Market Maker)」機制的 DEX 出現後慢慢得到了改善,透過匯集交易流動性的效果,交易者並非如以往一樣是以交易所中的買賣方進行互動,所有需要買賣代幣的使用者都是與 AMM 機制當中的流動池所交互,如此大大改善了 DEX 以往流動性不足的問題,如 Uniswap, Balancer, Curve,這些協議在 AMM 的設計當中都有著些微差異想要去解決現有問題,如 Balancer 不限於進行兩種 token 的交易、Curve 更利於穩定幣的交易等等.
 
 而這些交易平台隨著流動性挖礦的熱潮出現之後,更湧入了非常多的使用者針對這些協議進行提供流動性的動作,目前這些協議的 TVL 也有著非常大的成長.
 
